# sauron

./: .gitignore  README.md
camera/: FileMgr.cpp  Makefile  ThreadPool.cpp  UserDefined.cpp  Util.h  camera  camera.cpp  camera.sh  makefile  recipient.cpp  recipient.sh
camera/src/: AbstractSocket.h  CMakeLists.txt  DifferenceRater.cpp  DifferenceRater.h  DoNothing.cpp  DoNothing.h  Entry.h  FaceDetector.cpp  FaceDetector.h  FileMgr.cpp  FileMgr.h  IdentityTransformer.cpp  IdentityTransformer.h  MyCamera.cpp  Sendable.cpp  SendableMat.cpp  SendableMat.h  ServerSocket.cpp  ServerSocket.h  UserDefined.cpp  UserDefined.h  UserInterface.h  Util.cpp  Util.h  camera.cpp  recipient.cpp  recipient_faces.cpp
camera/src/usercode/: DoNothing.h  FaceDetector.cpp
camera2/: recipient.sh
camera2/src/: Entry.h  FileMgr.h  Util.cpp  camera.cpp  recipient.cpp
camera2/src/usercode/: DifferenceRater.h  DoNothing.cpp  FaceDetector.h  SendableMat.cpp  SendableMat.h
client/: AbstractSocket.cpp  AckSet.cpp  AckSet.h  ByteQueue.cpp  ByteQueue.h  CameraClient.py  CameraClientTest.py  ClientSocket.cpp  ClientSocket.h  Entry.cpp  FileMgr.cpp  FileMgr.h  ServerSocket.cpp  ServerSocket.h  UserDefined.h  Util.cpp  client.cpp  demo-server.go  main.cpp  makefile  netclient.cpp  server.cpp
client/Demo-Server/html/: demo.html
paper/: Makefile  abstract.tex  conclusion.tex  intro.tex  local.bib  motivation.tex  paper-cos518.tex  pull.tex  push.tex  related.tex
server/: main.go
src/: run.sh
src/camera/src/: FileMgr.cpp  camera.cpp
src/push_architecture/src/: CMakeLists.txt  ClientSocket.cpp  FileMgr.h  ThreadPool.h  recipient.cpp
src/push_architecture/src/usercode/: DifferenceRater.cpp  SendableMat.cpp
src/web-interface/: Makefile  camera.py  cameraClient.py  capturepic.py  db.py  faces.py  identity.py  mapper.py  models.py  requirements.txt  webserver.py
testV1/: Makefile  README  camera.py  capturepic.py  identity.py  image_store.db  mapper.py  models.py  requirements.txt  settings.py  utils.py  vision.py  webserver.py
vision/: CMakeLists.txt  readme  test.cc
